[package]
name = "anychain-ton"
description = "A Rust library for Ton-focused cryptocurrency wallets, enabling seamless transactions on the Ton blockchain"
version = "0.1.23"
keywords = ["ton", "blockchain", "wallet", "transactions"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Shawndslee", "cregis.com"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain-ton"

[dependencies]
#anychain-core = { version = "0.1.8" }
anychain-core = { git = "https://github.com/0xcregis/anychain", branch = "382-fix-ed25519-dalek-101-deps" }
tonlib-core-anychain = { version = "0.20.3" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = { version = "0.2" }
#nacl = "0.5.3"
ed25519-dalek = { version = "2", features = ["hazmat"] }
curve25519-dalek = { version = "4.1.3", features = ["group"] }
group = "0.13.0"
base64 = "0.22.1"
crc16 = "0.4.0"
hex = "0.4.3"
#rand = "0.8.5"
#rand_core = "0.6.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
toncenter = { package = "toncenter-anychain", git = "https://github.com/loki-cmu/toncenter-rs", branch = "main" }
num-bigint = { version = "0.4", features = ["serde"] }
#sha2 = { version = "0.10.8" }
